clusters_setup/ingress.yaml
# This yaml needs to be deployed every time a new version of the game is released.
# The contents of ingress_nginx are a one time set up. See more in the wiki.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aimmo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: REPLACE_STATIC_IP
    nginx.ingress.kubernetes.io/cors-allow-origin: REPLACE_CORS_ORIGIN
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - REPLACE_HOST
      secretName: ssl-cert-secret
  rules:
    - host: REPLACE_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: default-http-backend
                port:
                  number: 80
